--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.8",
+    "@google/generative-ai": "^0.11.1",
+    "@langchain/anthropic": "^0.1.17",
     "@plasmohq/messaging": "^0.6.2",
     "@plasmohq/storage": "^1.10.0",
-    "plasmo": "0.86.1",
+    "langchain": "^0.1.36",
+    "openai": "^4.47.1",
+    "plasmo": "^0.86.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.33.3",
+    "youtube-transcript": "^1.2.1",
+    "youtubei.js": "^9.4.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -33,6 +40,8 @@
     "host_permissions": [
       "https://*/*"
     ],
-    "permissions": ["scripting"]
+    "permissions": [
+      "scripting"
+    ]
   }
 }
